[package]
name = "spectrum-analyzer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = "1.7"
cpal = "0.13"
grounded = { path = "../.." }
minifb = "0.19"
plotters = "0.3"
plotters-bitmap = "0.3"
ringbuf = "0.2"